[gd_scene load_steps=58 format=2]

[ext_resource path="res://sprites/violet_spritesheet_57.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://zones_boxes/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://zones_boxes/hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.5893
height = 34.0068

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.68071, 11.6763 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 19, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/kick_hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/jab_hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/catchBriefCase/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/heavykick_hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/heavy_hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 29, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_summon_tiger"
}, {
"args": [  ],
"method": "_reset_state"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36, 37, 38 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_briefcase"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/catchBriefCase/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "JumpFall"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "JumpStart"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "altattack"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "catchCase"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "heavyaltattack"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "heavyattack"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "summon_tiger"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "throwCase"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachine" id=52]
states/Hit/node = SubResource( 15 )
states/Hit/position = Vector2( 172, 338.22 )
states/JumpFall/node = SubResource( 16 )
states/JumpFall/position = Vector2( 172, 82 )
states/JumpStart/node = SubResource( 17 )
states/JumpStart/position = Vector2( 356, 82 )
states/altattack/node = SubResource( 18 )
states/altattack/position = Vector2( 465, 338.22 )
states/attack/node = SubResource( 19 )
states/attack/position = Vector2( 316, 338.22 )
states/catchCase/node = SubResource( 20 )
states/catchCase/position = Vector2( 25, 263.22 )
states/heavyaltattack/node = SubResource( 21 )
states/heavyaltattack/position = Vector2( 832, 338.22 )
states/heavyattack/node = SubResource( 22 )
states/heavyattack/position = Vector2( 638, 338.22 )
states/idle/node = SubResource( 23 )
states/idle/position = Vector2( 274, 177 )
states/summon_tiger/node = SubResource( 24 )
states/summon_tiger/position = Vector2( 38, 144 )
states/throwCase/node = SubResource( 25 )
states/throwCase/position = Vector2( 25, 198.96 )
states/walk/node = SubResource( 26 )
states/walk/position = Vector2( 465, 177 )
transitions = [ "idle", "walk", SubResource( 27 ), "walk", "idle", SubResource( 28 ), "idle", "JumpStart", SubResource( 29 ), "walk", "JumpStart", SubResource( 30 ), "JumpStart", "JumpFall", SubResource( 31 ), "JumpFall", "idle", SubResource( 32 ), "walk", "attack", SubResource( 33 ), "idle", "attack", SubResource( 34 ), "attack", "idle", SubResource( 35 ), "walk", "altattack", SubResource( 36 ), "altattack", "idle", SubResource( 37 ), "idle", "altattack", SubResource( 38 ), "summon_tiger", "idle", SubResource( 39 ), "idle", "summon_tiger", SubResource( 40 ), "throwCase", "catchCase", SubResource( 41 ), "idle", "throwCase", SubResource( 42 ), "catchCase", "idle", SubResource( 43 ), "Hit", "idle", SubResource( 44 ), "idle", "Hit", SubResource( 45 ), "walk", "heavyattack", SubResource( 46 ), "walk", "heavyaltattack", SubResource( 47 ), "idle", "heavyaltattack", SubResource( 48 ), "idle", "heavyattack", SubResource( 49 ), "heavyattack", "idle", SubResource( 50 ), "heavyaltattack", "idle", SubResource( 51 ) ]
start_node = "idle"
graph_offset = Vector2( 78.5304, 113.794 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=53]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )
hframes = 57
frame = 6

[node name="body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="groundchecker" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4.68664 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )
anims/JumpFall = SubResource( 4 )
anims/JumpStart = SubResource( 5 )
anims/altattack = SubResource( 6 )
anims/attack = SubResource( 7 )
anims/catchCase = SubResource( 8 )
anims/heavyaltattack = SubResource( 9 )
anims/heavyattack = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/summon_tiger = SubResource( 12 )
anims/throwCase = SubResource( 13 )
anims/walk = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 52 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 53 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="jab_hitbox" parent="Position2D" instance=ExtResource( 3 )]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionPolygon2D" parent="Position2D/jab_hitbox" index="0"]
polygon = PoolVector2Array( 15.8075, -7.2059, 39.8075, -15.2059, 47.8075, -15.2059, 47.8075, 8.7941, 31.8075, 8.7941, 15.8075, 0.794102 )
disabled = true

[node name="kick_hitbox" parent="Position2D" instance=ExtResource( 3 )]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionPolygon2D" parent="Position2D/kick_hitbox" index="0"]
polygon = PoolVector2Array( 8, 32, 32, 32, 32, 16, 8, 0, 0, 8, 8, 24 )
disabled = true

[node name="tiger_spawnpoint" type="Position2D" parent="Position2D"]
visible = false
position = Vector2( 24, 0 )

[node name="catchBriefCase" parent="Position2D" instance=ExtResource( 4 )]
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" parent="Position2D/catchBriefCase" index="0"]
polygon = PoolVector2Array( -8, 8, -8, -8, 0, -16, 8, -16, 8, -8, 0, 8 )

[node name="LoseBriefCase" parent="Position2D" instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" parent="Position2D/LoseBriefCase" index="0"]
position = Vector2( 112, 0 )
polygon = PoolVector2Array( 320, -32, 320, 32, 336, 32, 336, -32 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Position2D/LoseBriefCase"]
position = Vector2( -48, 0 )
polygon = PoolVector2Array( 0, 32, 0, -32, 16, -32, 16, 32 )

[node name="hurtbox" parent="Position2D" instance=ExtResource( 4 )]
visible = false
collision_layer = 64
collision_mask = 0

[node name="CollisionPolygon2D" parent="Position2D/hurtbox" index="0"]
position = Vector2( 0, 32 )
polygon = PoolVector2Array( -16, 0, -8, -32, -8, -48, 0, -56, 8, -48, 8, -32, 16, 0 )

[node name="heavy_hitbox" parent="Position2D" instance=ExtResource( 3 )]
visible = false
collision_layer = 4
collision_mask = 8
damage = 2

[node name="CollisionPolygon2D" parent="Position2D/heavy_hitbox" index="0"]
polygon = PoolVector2Array( 0, 16, 24, 8, 56, -24, 64, -32, 64, -40, 48, -56, 32, -56, 0, -8 )
disabled = true

[node name="heavykick_hitbox" parent="Position2D" instance=ExtResource( 3 )]
visible = false
collision_layer = 4
collision_mask = 8
damage = 2

[node name="CollisionPolygon2D" parent="Position2D/heavykick_hitbox" index="0"]
polygon = PoolVector2Array( 0, 8, 40, 16, 48, 0, 40, -16, 0, -8 )
disabled = true
[connection signal="area_entered" from="Position2D/catchBriefCase" to="." method="_on_catchBriefCase_area_entered"]
[connection signal="area_entered" from="Position2D/LoseBriefCase" to="." method="_on_LoseBriefCase_area_entered"]
[connection signal="area_entered" from="Position2D/hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Position2D/jab_hitbox"]

[editable path="Position2D/kick_hitbox"]

[editable path="Position2D/catchBriefCase"]

[editable path="Position2D/LoseBriefCase"]

[editable path="Position2D/hurtbox"]

[editable path="Position2D/heavy_hitbox"]

[editable path="Position2D/heavykick_hitbox"]
